--- a/main.html
+++ b/main.html
@@ -4,10 +4,109 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+<table id="table-1" class="middle">
+    <tr>
+      <td id="t11">left</td>
+      <td id="t12" class="center">center</td>
+      <td id="t13" class="right">right</td>
+    </tr>
+    <tr>
+      <td>left</td>
+      <td class="center">center</td>
+      <td class="right">right</td>
+    </tr>
+    <tr>
+      <td>left</td>
+      <td class="center">center</td>
+      <td class="right">right</td>
+    </tr>
+  </table>
+
+  <!-- Table 2 -->
+  <table id="table-2" class="middle">
+    <tr>
+      <td id="t21" colspan="6">First Row - Single Cell</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"></td>
+      <td colspan="2"></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td colspan="2"></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"></td>
+      <td colspan="2"></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+
+  <!-- Table 3 -->
+  <table id="table-3" class="middle">
+    <tr class="green">
+      <td colspan="3">First Row - Green</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td id="t-image">
+        <img src="https://upload.wikimedia.org/wikipedia/en/7/7d/Michael_Jordan_in_1987.jpg" alt="Basketball Dunk" width="250">
+      </td>
+      <td></td>
+    </tr>
+    <tr class="blue">
+      <td colspan="3">Last Row - Blue</td>
+    </tr>
+  </table>
+
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
